# computer

./: .gitignore  main.py  pyproject.toml  requirements_dev.txt
.github/workflows/: codeql.yml  pylint.yml  pytest.yml
computer/: accumulator.py  alu.py  alu_buffer.py  clock.py  control_unit.py  cpu.py  data_types.py  in_port.py  instruction_executor.py  memory.py  out_port.py  program.py  program_counter.py  ram.py  registers.py  rom.py  screen.py  system.py
computer/circuits/: cmos.py
computer/electronic/: nmos_transistor.py  pmos_transistor.py  transistor.py
computer/electronic/circuits/: adder.py  bitwise.py  cmos.py  complement.py  custom.py  decoder.py  demux.py  flip_flop.py  mux.py  register.py  shifter.py  subtractor.py
computer/instructions/: algebra.py  flags.py  instruction.py  jump.py  load.py  logic.py  nop.py  rotate.py  store.py  tran.py
computer/logic_gates/: adder.py  cmos.py  custom.py  decoder.py  demux.py  flip_flop.py  mux.py  register.py  voltage_levels.py
computer_legacy/: alu.py  clock.py  cpu.py
computer_legacy/instructions/: bitwise_and.py  instructions.py  load.py
guignol/: interpreter.py
guignol/grammar/: guignol.lark
program/: addition.guignol  conway.guignol  first_legacy.py  test.guignol  test_8bits.guignol  test_perf.guignol  test_screen.guignol
tests/: test_interpreter.py  test_rom.py
tests/computer/: conftest.py  test_alu.py  test_clock.py  test_control_unit.py  test_cpu.py  test_data_types.py  test_memory.py  test_program_counter.py  test_registers.py  test_screen.py  test_system.py
utils/: logger.py
(+37 files in other folders)
