[project]
requires-python = ">= 3.12"
[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.pylint.format]
max-line-length = 150
disable=W1203,R0903

[tool.pylint.main]
ignore-paths = ["\\.git", "__pycache__", "build"]
